initial HTML structure & content

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
         <div class="actions">
             <button>New</button>
-            <button">Upload</button>
-            <button">Share</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </header>
     <main class="main-content">
