initial CSS and revised HTML

--- a/index.html
+++ b/index.html
@@ -7,157 +7,169 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <nav class="sidebar">
-        <header class="page-header">
+    <div class="side-pane">
+        <h1 class="page-title">
             <img src="" alt="dashboard logo">
-            <h1>Dashboard</h1>
+            Dashboard
+        </h1>
+        <nav class="sidebar">
+            <ul class="nav-menu">
+                <li><a href=""><img src="" alt="home icon">Home</a></li>
+                <li><a href=""><img src="" alt="profile icon">Profile</a></li>
+                <li><a href=""><img src="" alt="message icon">Message</a></li>
+                <li><a href=""><img src="" alt="history icon">History</a></li>
+                <li><a href=""><img src="" alt="tasks icon">Tasks</a></li>
+                <li><a href=""><img src="" alt="communities icon">Communities</a></li>
+            </ul>
+            <ul class="user-preferences">
+                <li><a href=""><img src="" alt="(icon)">Settings</a></li>
+                <li><a href=""><img src="" alt="(icon)">Support</a></li>
+                <li><a href=""><img src="" alt="(icon)">Privacy</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="main-pane">
+        <header class="header">
+            <section class="header-row1">
+                <div class="search-bar">
+                    <label for="search">🔍</label>
+                    <input type="search" id="search">
+                </div>
+                <div class="user-profile">
+                    <button class="notifications">🔔</button>
+                    <img src="" alt="user profile photo" class="profile-photo">
+                    <span class="profile-name">Morgan Oakley</span>
+                </div>
+            </section>
+            <section class="header-row2">
+                <div id="user-greeting">
+                    <img src="" alt="profile-photo" class="profile-photo">
+                    <div class="greeting">
+                        <div class="greeting-text">Hi there,</div>
+                        <span class="profile-name">Morgan Oakley</span>
+                        <span class="profile-username">(@morgan)</span>
+                    </div>
+                </div>
+                <div class="actions">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </section>
         </header>
-        <ul class="nav-menu">
-            <li><a href=""><img src="" alt="(icon)">Home</a></li>
-            <li><a href=""><img src="" alt="(icon)">Profile</a></li>
-            <li><a href=""><img src="" alt="(icon)">Message</a></li>
-            <li><a href=""><img src="" alt="(icon)">History</a></li>
-            <li><a href=""><img src="" alt="(icon)">Tasks</a></li>
-            <li><a href=""><img src="" alt="(icon)">Communities</a></li>
-        </ul>
-        <ul class="user-preferences">
-            <li><a href=""><img src="" alt="(icon)">Settings</a></li>
-            <li><a href=""><img src="" alt="(icon)">Support</a></li>
-            <li><a href=""><img src="" alt="(icon)">Privacy</a></li>
-        </ul>
-    </nav>
-    <header class="header">
-        <div class="search-bar">
-            <label for="search">🔍</label>
-            <input type="search" id="search">
-        </div>
-        <button class="notifications">🔔</button>
-        <div class="user-profile">
-            <img src="" alt="user profile photo" class="profile-photo">
-            <span class="profile-name">Morgan Oakley</span>
-        </div>
-        <div id="user-greeting">
-            <img src="" alt="profile-photo" class="profile-photo">
-            <div class="greeting">Hi there,</div>
-            <span class="profile-name">Morgan Oakley</span>
-            <span class="profile-username">(@morgan)</span>
-        </div>
-        <div class="actions">
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
-        </div>
-    </header>
-    <main class="main-content">
-        <h2 class="main-content-title">Your Projects</h2>
-        <section class="user-projects">
-            <div class="project-card">
-                <h3 class="project-title">Super Cool Project</h3>
-                <div class="project-description">
-                    Sed tempus ut lacus ut scelerisque. Susepndisse sollicitudin nibh erat, id facilisis felis accumsan nec.
-                </div>
-                <div class="interactions">
-                    <button class="favorite">⭐️</button>
-                    <button class="watchlist">👁️</button>
-                    <button class="share">↱</button>
-                </div>
+        <main class="main-content">
+            <div class="middle-area">
+                <h2 class="main-content-title">Your Projects</h2>
+                <section class="user-projects">
+                    <div class="project-card">
+                        <h3 class="project-title">Super Cool Project</h3>
+                        <div class="project-description">
+                            Sed tempus ut lacus ut scelerisque. Susepndisse sollicitudin nibh erat, id facilisis felis accumsan nec.
+                        </div>
+                        <div class="interactions">
+                            <button class="favorite">⭐️</button>
+                            <button class="watchlist">👁️</button>
+                            <button class="share">↱</button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h3 class="project-title">Less Cool Project</h3>
+                        <div class="project-description">
+                            Nullam condimentum psum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+                        </div>
+                        <div class="interactions">
+                            <button class="favorite">⭐️</button>
+                            <button class="watchlist">👁️</button>
+                            <button class="share">↱</button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h3 class="project-title">Impossible App</h3>
+                        <div class="project-description">
+                            In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
+                        </div>
+                        <div class="interactions">
+                            <button class="favorite">⭐️</button>
+                            <button class="watchlist">👁️</button>
+                            <button class="share">↱</button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h3 class="project-title">Easy Peasy App</h3>
+                        <div class="project-description">
+                            Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibenndum magna tencidunt.
+                        </div>
+                        <div class="interactions">
+                            <button class="favorite">⭐️</button>
+                            <button class="watchlist">👁️</button>
+                            <button class="share">↱</button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h3 class="project-title">Ad Blocker</h3>
+                        <div class="project-description">
+                            Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+                        </div>
+                        <div class="interactions">
+                            <button class="favorite">⭐️</button>
+                            <button class="watchlist">👁️</button>
+                            <button class="share">↱</button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h3 class="project-title">Money Maker</h3>
+                        <div class="project-description">
+                            Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.
+                        </div>
+                        <div class="interactions">
+                            <button class="favorite">⭐️</button>
+                            <button class="watchlist">👁️</button>
+                            <button class="share">↱</button>
+                        </div>
+                    </div>
+                </section>
             </div>
-            <div class="project-card">
-                <h3 class="project-title">Less Cool Project</h3>
-                <div class="project-description">
-                    Nullam condimentum psum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
-                </div>
-                <div class="interactions">
-                    <button class="favorite">⭐️</button>
-                    <button class="watchlist">👁️</button>
-                    <button class="share">↱</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <h3 class="project-title">Impossible App</h3>
-                <div class="project-description">
-                    In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
-                </div>
-                <div class="interactions">
-                    <button class="favorite">⭐️</button>
-                    <button class="watchlist">👁️</button>
-                    <button class="share">↱</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <h3 class="project-title">Easy Peasy App</h3>
-                <div class="project-description">
-                    Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibenndum magna tencidunt.
-                </div>
-                <div class="interactions">
-                    <button class="favorite">⭐️</button>
-                    <button class="watchlist">👁️</button>
-                    <button class="share">↱</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <h3 class="project-title">Ad Blocker</h3>
-                <div class="project-description">
-                    Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
-                </div>
-                <div class="interactions">
-                    <button class="favorite">⭐️</button>
-                    <button class="watchlist">👁️</button>
-                    <button class="share">↱</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <h3 class="project-title">Money Maker</h3>
-                <div class="project-description">
-                    Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.
-                </div>
-                <div class="interactions">
-                    <button class="favorite">⭐️</button>
-                    <button class="watchlist">👁️</button>
-                    <button class="share">↱</button>
-                </div>
-            </div>
-        </section>
-        <aside class="right-sidebar">
-            <h2 class="main-content-title">Announcements</h2>
-            <section class="announcements">
-                <div class="announcement-card">
-                    <div class="announcement-title">Site Maintenance</div>
-                    <div class="announcement-content">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</div>
-                </div>
-                <div class="announcement-card">
-                    <div class="announcement-title">Community Share Day</div>
-                    <div class="announcement-content">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</div>
-                </div>
-                <div class="announcement-card">
-                    <div class="announcement-title">Updated Privacy Policy</div>
-                    <div class="announcement-content">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</div>
-                </div>
-            </section>
-            <h2 class="main-content-title">Trending</h2>
-            <section class="trending-users">
-                <div class="trending-card">
-                    <img src="" alt="profile photo" class="trending-user-profile-photo">
-                    <div class="trending-user-username">@tegan</div>
-                    <div class="trending-user-bio">World Peace Builder</div>
-                </div>
-                <div class="trending-card">
-                    <img src="" alt="profile photo" class="trending-user-profile-photo">
-                    <div class="trending-user-username">@morgan</div>
-                    <div class="trending-user-bio">Super Cool Project</div>
-                </div>
-                <div class="trending-card">
-                    <img src="" alt="profile photo" class="trending-user-profile-photo">
-                    <div class="trending-user-username">@kendall</div>
-                    <div class="trending-user-bio">Life Changing App</div>
-                </div>
-                <div class="trending-card">
-                    <img src="" alt="profile photo" class="trending-user-profile-photo">
-                    <div class="trending-user-username">@alex</div>
-                    <div class="trending-user-bio">No Traffic Maker</div>
-                </div>
-            </section>
-        </aside>
-    </main>
+            <aside class="right-area">
+                <h2 class="main-content-title">Announcements</h2>
+                <section class="announcements">
+                    <div class="announcement-card">
+                        <h4 class="announcement-title">Site Maintenance</h4>
+                        <div class="announcement-content">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</div>
+                    </div>
+                    <div class="announcement-card">
+                        <h4 class="announcement-title">Community Share Day</h4>
+                        <div class="announcement-content">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</div>
+                    </div>
+                    <div class="announcement-card">
+                        <h4 class="announcement-title">Updated Privacy Policy</h4>
+                        <div class="announcement-content">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</div>
+                    </div>
+                </section>
+                <h2 class="main-content-title">Trending</h2>
+                <section class="trending-users">
+                    <div class="trending-card">
+                        <img src="" alt="profile photo" class="trending-user-profile-photo">
+                        <div class="trending-user-username">@tegan</div>
+                        <div class="trending-user-bio">World Peace Builder</div>
+                   </div>
+                    <div class="trending-card">
+                           <img src="" alt="profile photo" class="trending-user-profile-photo">
+                           <div class="trending-user-username">@morgan</div>
+                        <div class="trending-user-bio">Super Cool Project</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="" alt="profile photo" class="trending-user-profile-photo">
+                        <div class="trending-user-username">@kendall</div>
+                        <div class="trending-user-bio">Life Changing App</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="" alt="profile photo" class="trending-user-profile-photo">
+                        <div class="trending-user-username">@alex</div>
+                        <div class="trending-user-bio">No Traffic Maker</div>
+                    </div>
+                </section>
+            </aside>
+        </main>
+    </div>
 </body>
 </html>
