images & refined positioning

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <div class="side-pane">
         <h1 class="page-title">
-            <img src="" alt="dashboard logo">
+            <img src="images/logoipsum-293.svg" alt="dashboard logo">
             Dashboard
         </h1>
         <nav class="sidebar">
             <ul class="nav-menu">
-                <li><a href=""><img src="" alt="home icon">Home</a></li>
-                <li><a href=""><img src="" alt="profile icon">Profile</a></li>
-                <li><a href=""><img src="" alt="message icon">Message</a></li>
-                <li><a href=""><img src="" alt="history icon">History</a></li>
-                <li><a href=""><img src="" alt="tasks icon">Tasks</a></li>
-                <li><a href=""><img src="" alt="communities icon">Communities</a></li>
+                <li><a href=""><img src="images/icons/home.svg" alt="home icon"><span>Home</span></a></li>
+                <li><a href=""><img src="images/icons/card-account-details-outline.svg" alt="profile icon"><span>Profile</span></a></li>
+                <li><a href=""><img src="images/icons/message.svg" alt="message icon"><span>Message</span></a></li>
+                <li><a href=""><img src="images/icons/clock-time-five.svg" alt="history icon"><span>History</span></a></li>
+                <li><a href=""><img src="images/icons/note-multiple.svg" alt="tasks icon"><span>Tasks</span></a></li>
+                <li><a href=""><img src="images/icons/account-group.svg" alt="communities icon"><span>Communities</span></a></li>
             </ul>
             <ul class="user-preferences">
-                <li><a href=""><img src="" alt="(icon)">Settings</a></li>
-                <li><a href=""><img src="" alt="(icon)">Support</a></li>
-                <li><a href=""><img src="" alt="(icon)">Privacy</a></li>
+                <li><a href=""><img src="images/icons/cog.svg" alt="settings icon"><span>Settings</span></a></li>
+                <li><a href=""><img src="images/icons/help-box.svg" alt="support icon"><span>Support</span></a></li>
+                <li><a href=""><img src="images/icons/shield-check.svg" alt="privacy icon"><span>Privacy</span></a></li>
             </ul>
         </nav>
     </div>
@@ -32,18 +32,18 @@
         <header class="header">
             <section class="header-row1">
                 <div class="search-bar">
-                    <label for="search">🔍</label>
+                    <label for="search"><img src="images/icons/magnify.svg" alt="search icon"></label> 
                     <input type="search" id="search">
                 </div>
                 <div class="user-profile">
-                    <button class="notifications">🔔</button>
-                    <img src="" alt="user profile photo" class="profile-photo">
+                    <button class="notifications"><img src="images/icons/bell-ring.svg" alt="notifications icon"></button>
+                    <img src="images/profile photos/profile-photo1.png" alt="user profile photo" class="profile-photo">
                     <span class="profile-name">Morgan Oakley</span>
                 </div>
             </section>
             <section class="header-row2">
                 <div id="user-greeting">
-                    <img src="" alt="profile-photo" class="profile-photo">
+                    <img src="images/profile photos/profile-photo1.png" alt="user profile photo" class="profile-photo">
                     <div class="greeting">
                         <div class="greeting-text">Hi there,</div>
                         <span class="profile-name">Morgan Oakley</span>
@@ -67,9 +67,9 @@
                             Sed tempus ut lacus ut scelerisque. Susepndisse sollicitudin nibh erat, id facilisis felis accumsan nec.
                         </div>
                         <div class="interactions">
-                            <button class="favorite">⭐️</button>
-                            <button class="watchlist">👁️</button>
-                            <button class="share">↱</button>
+                            <button class="favorite"><img src="images/icons/star-plus-outline.svg" alt="favorite icon"></button>
+                            <button class="watchlist"><img src="images/icons/eye-plus-outline.svg" alt="watchlist icon"></button>
+                            <button class="share"><img src="images/icons/share-variant-outline.svg" alt=""></button>
                         </div>
                     </div>
                     <div class="project-card">
@@ -78,9 +78,9 @@
                             Nullam condimentum psum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
                         </div>
                         <div class="interactions">
-                            <button class="favorite">⭐️</button>
-                            <button class="watchlist">👁️</button>
-                            <button class="share">↱</button>
+                            <button class="favorite"><img src="images/icons/star-plus-outline.svg" alt="favorite icon"></button>
+                            <button class="watchlist"><img src="images/icons/eye-plus-outline.svg" alt="watchlist icon"></button>
+                            <button class="share"><img src="images/icons/share-variant-outline.svg" alt=""></button>
                         </div>
                     </div>
                     <div class="project-card">
@@ -89,9 +89,9 @@
                             In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
                         </div>
                         <div class="interactions">
-                            <button class="favorite">⭐️</button>
-                            <button class="watchlist">👁️</button>
-                            <button class="share">↱</button>
+                            <button class="favorite"><img src="images/icons/star-plus-outline.svg" alt="favorite icon"></button>
+                            <button class="watchlist"><img src="images/icons/eye-plus-outline.svg" alt="watchlist icon"></button>
+                            <button class="share"><img src="images/icons/share-variant-outline.svg" alt=""></button>
                         </div>
                     </div>
                     <div class="project-card">
@@ -100,9 +100,9 @@
                             Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibenndum magna tencidunt.
                         </div>
                         <div class="interactions">
-                            <button class="favorite">⭐️</button>
-                            <button class="watchlist">👁️</button>
-                            <button class="share">↱</button>
+                            <button class="favorite"><img src="images/icons/star-plus-outline.svg" alt="favorite icon"></button>
+                            <button class="watchlist"><img src="images/icons/eye-plus-outline.svg" alt="watchlist icon"></button>
+                            <button class="share"><img src="images/icons/share-variant-outline.svg" alt=""></button>
                         </div>
                     </div>
                     <div class="project-card">
@@ -111,9 +111,9 @@
                             Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
                         </div>
                         <div class="interactions">
-                            <button class="favorite">⭐️</button>
-                            <button class="watchlist">👁️</button>
-                            <button class="share">↱</button>
+                            <button class="favorite"><img src="images/icons/star-plus-outline.svg" alt="favorite icon"></button>
+                            <button class="watchlist"><img src="images/icons/eye-plus-outline.svg" alt="watchlist icon"></button>
+                            <button class="share"><img src="images/icons/share-variant-outline.svg" alt=""></button>
                         </div>
                     </div>
                     <div class="project-card">
@@ -122,9 +122,9 @@
                             Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.
                         </div>
                         <div class="interactions">
-                            <button class="favorite">⭐️</button>
-                            <button class="watchlist">👁️</button>
-                            <button class="share">↱</button>
+                            <button class="favorite"><img src="images/icons/star-plus-outline.svg" alt="favorite icon"></button>
+                            <button class="watchlist"><img src="images/icons/eye-plus-outline.svg" alt="watchlist icon"></button>
+                            <button class="share"><img src="images/icons/share-variant-outline.svg" alt=""></button>
                         </div>
                     </div>
                 </section>
@@ -132,38 +132,38 @@
             <aside class="right-area">
                 <h2 class="main-content-title">Announcements</h2>
                 <section class="announcements">
-                    <div class="announcement-card">
+                    <div class="announcement-card" id="announcement-card1">
                         <h4 class="announcement-title">Site Maintenance</h4>
                         <div class="announcement-content">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</div>
                     </div>
-                    <div class="announcement-card">
+                    <div class="announcement-card" id="announcement-card2">
                         <h4 class="announcement-title">Community Share Day</h4>
                         <div class="announcement-content">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</div>
                     </div>
-                    <div class="announcement-card">
+                    <div class="announcement-card" id="announcement-card3">
                         <h4 class="announcement-title">Updated Privacy Policy</h4>
                         <div class="announcement-content">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</div>
                     </div>
                 </section>
-                <h2 class="main-content-title">Trending</h2>
+                <h2 class="main-content-title" id="title-trending">Trending</h2>
                 <section class="trending-users">
-                    <div class="trending-card">
-                        <img src="" alt="profile photo" class="trending-user-profile-photo">
+                    <div class="trending-card" id="trending-card1">
+                        <img src="images/profile photos/profile-photo2.png" alt="trending profile photo1" class="trending-user-photo">
                         <div class="trending-user-username">@tegan</div>
                         <div class="trending-user-bio">World Peace Builder</div>
                    </div>
-                    <div class="trending-card">
-                           <img src="" alt="profile photo" class="trending-user-profile-photo">
+                    <div class="trending-card" id="trending-card2">
+                           <img src="images/profile photos/profile-photo1.png" alt="trending profile photo2" class="trending-user-photo">
                            <div class="trending-user-username">@morgan</div>
                         <div class="trending-user-bio">Super Cool Project</div>
                     </div>
-                    <div class="trending-card">
-                        <img src="" alt="profile photo" class="trending-user-profile-photo">
+                    <div class="trending-card" id="trending-card3">
+                        <img src="images/profile photos/profile-photo3.png" alt="trending profile photo3" class="trending-user-photo">
                         <div class="trending-user-username">@kendall</div>
                         <div class="trending-user-bio">Life Changing App</div>
                     </div>
-                    <div class="trending-card">
-                        <img src="" alt="profile photo" class="trending-user-profile-photo">
+                    <div class="trending-card" id="trending-card4">
+                        <img src="images/profile photos/profile-photo4.png" alt="trending profile photo4" class="trending-user-photo">
                         <div class="trending-user-username">@alex</div>
                         <div class="trending-user-bio">No Traffic Maker</div>
                     </div>
