--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="nav-menu">
                 <li><a href=""><img src="images/icons/home.svg" alt="home icon"><span>Home</span></a></li>
                 <li><a href=""><img src="images/icons/card-account-details-outline.svg" alt="profile icon"><span>Profile</span></a></li>
-                <li><a href=""><img src="images/icons/message.svg" alt="message icon"><span>Message</span></a></li>
+                <li><a href=""><img src="images/icons/message-reply.svg" alt="message icon"><span>Message</span></a></li>
                 <li><a href=""><img src="images/icons/clock-time-five.svg" alt="history icon"><span>History</span></a></li>
                 <li><a href=""><img src="images/icons/note-multiple.svg" alt="tasks icon"><span>Tasks</span></a></li>
                 <li><a href=""><img src="images/icons/account-group.svg" alt="communities icon"><span>Communities</span></a></li>
@@ -36,7 +36,7 @@
                     <input type="search" id="search">
                 </div>
                 <div class="user-profile">
-                    <button class="notifications"><img src="images/icons/bell-ring.svg" alt="notifications icon"></button>
+                    <button class="notifications"><img src="images/icons/bell-ring-outline.svg" alt="notifications icon"></button>
                     <img src="images/profile photos/profile-photo1.png" alt="user profile photo" class="profile-photo">
                     <span class="profile-name">Morgan Oakley</span>
                 </div>
